...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lYo-T6-FSb">
                                <rect key="frame" x="16" y="191" width="378" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="NoDigitTF"/>
                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SJF-do-vfv">
                                <rect key="frame" x="16" y="280" width="378" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="InputLimitTF"/>
                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="wwwww-ddddd" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bRX-W6-yg0">
                                <rect key="frame" x="16" y="369" width="378" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="InputMaskTF"/>
                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9f-9K-1kk">
                                <rect key="frame" x="367" y="256" width="27" height="16"/>
                                <accessibility key="accessibilityConfiguration" identifier="InputLengthLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                <nil key="textColor"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iu6-U3-ef1">
                                <rect key="frame" x="16" y="541" width="378" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordTF"/>
                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- Min length 8 characters." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jla-gq-cDZ">
                                <rect key="frame" x="20" y="593" width="156" height="16"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordLengthLabel"/>
                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="13"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- Min 1 digit," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fh-Fy-DPp">
                                <rect key="frame" x="20" y="617" width="73" height="16"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordDigitsLabel"/>
                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="13"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- Min 1 lowecase," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QlG-Ku-PQX">
                                <rect key="frame" x="20" y="641" width="102" height="16"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordLowerCaseLabel"/>
                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="13"/>
                                <nil key="textColor"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- Min 1 capital required." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hUo-Ih-5jo">
                                <rect key="frame" x="20" y="665" width="140.5" height="16"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordCapitalLabel"/>
                                <fontDescription key="fontDescription" name="Rubik-Regular" family="Rubik" pointSize="13"/>
                                <nil key="textColor"/>
...
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="hvX-pF-l8p">
                                <rect key="frame" x="16" y="573" width="379" height="2"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordProgressView"/>
                            </progressView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ugh-2K-8V9">
...
